--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh">
 <head>
   <meta charset="utf-8">
-  <title>真央研习班官网|中国科学技术大学</title>
-  <meta name="keywords" content="真央研习班，真央一，Git，中国科学技术大学">
-  <meta name="description" content="中国科学技术大学 Web研究室 Git课程负责人真央一教授开设的研习班。学员招募中！">
+  <title>真央研習班官網|中國科學技術大學</title>
+  <meta name="keywords" content="真央研習班，真央一，Git，中國科學技術大學">
+  <meta name="description" content="中國科學技術大學 Web研究室 Git課程負責人真央一教授開設的研習班。學員招募中！">
   <link rel="stylesheet" href="css/common.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -18,15 +18,15 @@
         <li><a href="works.html">WORKS</a></li>
       </ul>
     </nav>
-    <h1><a href="index.html">真央研习班</a></h1>
-    <p>来吧，从古老的手动备份年代跃迁到Git的世界！学员招募中</p>
+    <h1><a href="index.html">真央研習班</a></h1>
+    <p>來吧，從古老的手動備份年代躍遷到Git的世界！學員招募中</p>
   </header>
 
   <main>
     <div class="row">
       <div class="col harf">
         <h2>NEWS</h2>
-        <p>谁都可以参加！研习班开放日 〜试着使用Git〜</p>
+        <p>誰都可以參加！研習班開放日 〜試著使用Git〜</p>
         <p>日期待定</p>
       </div>
     </div>
@@ -52,13 +52,13 @@
     </div>
     <div class="row">
       <div class="center">
-          <input class="button" onClick="window.open().location.href='https://twitter.com/webdesignManga'" value="更多研讨班活动">
+          <input class="button" onClick="window.open().location.href='https://twitter.com/webdesignManga'" value="更多研討班活動">
       </div>
     </div>
   </main>
 
   <footer>
-    <p>本网站，是书籍《和Wakaba酱一起学Git》的练习用素材。</p>
+    <p>本網站，是書籍《和Wakaba醬一起學Git》的練習用素材。</p>
   </footer>
 </body>
 </html>
