--- a/member.html
+++ b/member.html
@@ -2,9 +2,9 @@
 <html lang="zh">
 <head>
   <meta charset="utf-8">
-  <title>成员一览|中国科学技术大学 真央研习班</title>
-  <meta name="keywords" content="成员，简介，真央研习班">
-  <meta name="description" content="真央研习班成员一览。">
+  <title>成員一覽|中國科學技術大學 真央研習班</title>
+  <meta name="keywords" content="成員，簡介，真央研習班">
+  <meta name="description" content="真央研習班成員一覽。">
   <link rel="stylesheet" href="css/common.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
       </ul>
 	</nav>
     <h1>MEMBER</h1>
-    <p>真央研习班的成员</p>
+    <p>真央研習班的成員</p>
   </header>
 
   <main>
@@ -28,46 +28,46 @@
       <div class="col harf">
         <h2>Professor</h2>
         <img src="images/icon_mao.jpg" alt="魔王教授">
-        <p>真央研习班教授。本名“真央 一”。<br>自称800岁。喜欢的饮料是可乐。</p>
-        <p>一言：“Git超赞！”</p>
+        <p>真央研習班教授。本名“真央 一”。<br>自稱800歲。喜歡的飲料是可樂。</p>
+        <p>一言：「Git超讚！」</p>
       </div>
       <div class="col harf">
         <h2>Assistant</h2>
         <img src="images/icon_elmas.jpg" alt="Elmas">
-        <p>真央研习班助手。兴趣是读书。</p>
-        <p>一言：“Git不仅对IT从业者而言很重要，对文字工作者也很有用的哦”</p>
+        <p>真央研習班助手。興趣是讀書。</p>
+        <p>一言：「Git不僅對IT從業者而言很重要，對文字工作者也很有用的哦」</p>
       </div>
     </div>
     <div class="row">
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="Wakaba">
-	<p>新学员。梦想是成为web设计师。</p> 
+	<p>新學員。夢想是成為web設計師。</p> 
       </div>
     </div>
 
     <div class="row">
-      <h2>成员互评</h2>
+      <h2>成員互評</h2>
       <table>
         <tbody>
           <tr>
             <th>魔王教授</th>
-            <td>「嗯，不是坏人哟。」by Elmas<br>「习惯就好了。」by Wakaba</td>
+            <td>「嗯，不是壞人喲。」by Elmas<br>「習慣就好了。」by Wakaba</td>
           </tr>
           <tr>
             <th>Elmas小姐</th>
-            <td>「优秀助手！偶尔有些冷漠。」by 魔王<br>「Elmas小姐又聪明又温柔，很耐心地教我。」by Wakaba</td>
+            <td>「優秀助手！偶爾有些冷漠。」by 魔王<br>「Elmas小姐又聰明又溫柔，很耐心地教我。」by Wakaba</td>
           </tr>
           <tr>
-            <th>Wakaba酱</th>
-            <td>「有趣的家伙，作为新人，学得还是挺快的。」by 魔王<br>「有疑问的时候，会不扭捏地直接提出来，真是帮了我的大忙。」by Elmas</td>
+            <th>Wakaba醬</th>
+            <td>「有趣的家夥，作為新人，學得還是挺快的。」by 魔王<br>「有疑問的時候，會不扭捏地直接提出來，真是幫了我的大忙。」by Elmas</td>
           </tr> 
         </tbody>
       </table>
     </div>
   </main>
   <footer>
-    <p>本网站，是书籍《和Wakaba酱一起学Git》的练习用素材。</p>
+    <p>本網站，是書籍《和Wakaba醬一起學Git》的練習用素材。</p>
   </footer>
 </body>
 </html>
