--- a/works.html
+++ b/works.html
@@ -2,9 +2,9 @@
 <html lang="zh">
 <head>
   <meta charset="utf-8">
-  <title>研习班活动 |中国科学技术大学 真央研习班</title>
-  <meta name="keywords" content="研习班活动，研究，真央研习班">
-  <meta name="description" content="真央研习班的研习活动与课外活动。">
+  <title>研習班活動 |中國科學技術大學 真央研習班</title>
+  <meta name="keywords" content="研習班活動，研究，真央研習班">
+  <meta name="description" content="真央研習班的研習活動與課外活動。">
   <link rel="stylesheet" href="css/common.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -19,32 +19,32 @@
       </ul>
 	</nav>
     <h1>WORKS</h1>
-    <p>真央研习班的活动</p>
+    <p>真央研習班的活動</p>
   </header>
 
   <main>    
     <div class="row">
-      <h2>研究活动</h2>
+      <h2>研究活動</h2>
       <table>
         <tbody>
           <tr>
-            <th>研习课Ⅱ研究课题</th>
-            <td><a href="http://www.c-r.com/book/detail/1075" target="_blank">和Wakaba酱一起学web制作</a></td>
+            <th>研習課Ⅱ研究課題</th>
+            <td><a href="http://www.c-r.com/book/detail/1075" target="_blank">和Wakaba醬一起學web制作</a></td>
           </tr>
           <tr>
-            <th>研习课Ⅰ研究课题</th>
-            <td>和Wakaba酱一起学Git</td>
+            <th>研習課Ⅰ研究課題</th>
+            <td>和Wakaba醬一起學Git</td>
           </tr>    
         </tbody>
       </table>
     </div>
     <div class="row">
-      <h2>课外活动</h2>
+      <h2>課外活動</h2>
       <table>
         <tbody>
           <tr>
-            <th>拜访办公室</th>
-            <td><a href="https://codeiq.jp/magazine/category/wakaba_office_2/" target="_blank">Wakaba酱拜访办公室的漫画</a></td>
+            <th>拜訪辦公室</th>
+            <td><a href="https://codeiq.jp/magazine/category/wakaba_office_2/" target="_blank">Wakaba醬拜訪辦公室的漫畫</a></td>
           </tr>  
         </tbody>
       </table>
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <p>本网站，是书籍《和Wakaba酱一起学Git》的练习用素材。</p>
+    <p>本網站，是書籍《和Wakaba醬一起學Git》的練習用素材。</p>
   </footer>
 </body>
 </html>
